* Added RDFa W3c validation button * Added missing default XSL setting classes as view * Added optional qrcode in page * Added scrolling to use stop skip/N * Added link to /sparql endpoint * Fixed sid * Fixed shortened uri if too long * Fixed bookmarable urls

--- a/binsrc/b3s/styles/default.css
+++ b/binsrc/b3s/styles/default.css
@@ -515,3 +515,13 @@ div#dbg_output {
 span.pivot_pg a { text-decoration: none; }
 span.pivot_pg a:hover { text-decoration: underline; }
 
+div#nav {
+    float: left;
+    clear: left;
+    text-align: center;
+    margin-left: 50px;
+}
+
+a#sp_link { font-size: 11pt; font-weight:normal; }
+
+#qrcode { position:fixed; top:100px; right: 30px; z-index: 0; } 
